# AR_Dashboard

./: .gitignore  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: .sessions.json  auth_config.py  authorized_users.json  database.py  settings.py
controllers/: projection_controller.py
models/: access_model.py  ar_model.py
tests/test_config/: test_auth_config.py
tests/test_controllers/: test_projection_controller.py
tests/test_models/: test_access_model.py  test_ar_model.py
tests/test_utils/: test_sharepoint_fetch.py
tests/test_views/: test_admin_view.py  test_dashboard_view.py
utils/: auth.py  auth_microsoft.py  formatters.py  persistent_session.py  session_manager.py  sharepoint_fetch.py
views/: admin_view.py  auth_view.py  dashboard_view.py
