[project]
name = "AR_Dashboard"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "streamlit==1.54.0",
    "pandas==2.3.3",
    "numpy==2.4.2",
    "plotly==6.5.2",
    "altair==6.0.0",
    "requests==2.32.5",
    "msal==1.34.0",
    "python-dotenv==1.2.1",
    "pyarrow==23.0.1",
    "kaleido==1.2.0",
    "pyxlsb",
    "watchdog",
    "extra-streamlit-components>=0.1.81",
    "openpyxl"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "black",
    "ruff",
    "bandit",
]

# -------------------------
# Black
# -------------------------
[tool.black]
line-length = 88
target-version = ["py311"]

# -------------------------
# Ruff
# -------------------------
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["models", "controllers", "utils"]

# -------------------------
# Pytest
# -------------------------
[tool.pytest.ini_options]
addopts = "--cov=. --cov-fail-under=85"
